syntax = 'proto3';

service User {
  rpc list (ListRequest) returns (stream UserData) {}
  rpc retrieve (UserRetrieveRequest) returns (UserData) {}
  rpc authenticate_token (TokenVerificationRequest) returns (TokenVerificationResponse) {}
}

message ListRequest {
}

message UserRetrieveRequest {
  int64 id = 1;
}

message TokenVerificationRequest {
  string token = 1;
}

message TokenVerificationResponse {
  bool is_valid_token = 1;
}

message UserData {
  int64 id = 1;
  string username = 2;
  string email = 3;
}

